<?xml version="1.0" encoding="utf-8"?>
<!--    //Student Name: Muhammed Adeyemi, 216766644-->
<!--    // This Lab was done individually-->
<!--    //https://youtu.be/HLpLYFbyRw8-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/key"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cryptographic_key"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/encrypt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/encrypt"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:onClick="onEncrypt"
        android:text="@string/encrypt"
        app:layout_constraintEnd_toStartOf="@+id/decrypt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/key"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/decrypt"
        android:layout_width="86dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:onClick="onDecrypt"
        android:text="@string/decrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/encrypt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/file"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/file_name"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key" />

    <Button
        android:id="@+id/save"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:onClick="onSave"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/load"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/file"
        app:layout_constraintTop_toBottomOf="@+id/encrypt" />

    <Button
        android:id="@+id/load"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="onLoad"
        android:text="@string/load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/decrypt" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="515dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/note"
            android:inputType="textCapCharacters"
            android:textSize="30sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>